# rand_enum

./: Cargo.toml  README.md
src/: lib.rs
tests/: distribute.rs
