[package]
name = "rand_enum"
version = "0.1.0"
edition = "2018"
description = "Implement rand Distribution for an enum"
documentation = "https://docs.rs/rand_enum"
repository = "https://github.com/jewlexx/rand_enum/"
license = "MIT OR Apache-2.0"
keywords = ["rand", "enum", "distribution"]
readme = "README.md"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
litrs = "0.4.0"
proc-macro-crate = "1.3.1"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.13", features = ["full"] }

[dev-dependencies]
rand = "0.8.5"
